2008-07-10     Peter Rasmussen <Peter.Rasmussen@embedded-brains.de>

	* score/cpu/m68k/cpu_asm.S, cpukit/score/cpu/m68k/rtems/asm.h, 
	cpukit/score/cpu/m68k/rtems/score/cpu.h, 
	score/cpu/m68k/rtems/score/m68k.h:

	added support to save coldfire FPU/EMAC context

2008-07-10     Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libi2c/libi2c.c, libi2c/libi2c.h:
	make buffer passed to *write* functions a const pointer


2008-07-10	Till Straumann <strauman@slac.stanford.edu>

	* cpukit/score/cpu/powerpc/rtems/new-exceptions/cpu.h,
	cpukit/score/cpu/powerpc/rtems/score/cpu.h,
	cpukit/score/cpu/powerpc/rtems/score/powerpc.h:
	Removed all macro definitions which depended on
	the compiler defining a PPC CPU-model dependent
	symbol.
	Macros which were not used by cpukit have been
	moved to libcpu/powerpc/rtems/powerpc/powerpc.h.
	
2008-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/rtems/status-checks.h: Fix style.

2008-07-10     Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/intr.h: Documentation.

	* cpukit/include/rtems/irq-extension.h: Extension of the RTEMS
	Interrupt Manager (shared handler and handler with a handle).


2008-07-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpukit/include/rtems/status-checks.h: Macros for status code and
	return value checks.

	* cpukit/libmisc/shell/shell.c: Restore terminal settings on exit.

	* cpukit/libfs/src/dosfs/msdos_dir.c,
	cpukit/libfs/src/dosfs/msdos_file.c: Added S_IRWXU, S_IRWXG and S_IRWXO
	to file mode.

	* cpukit/libi2c/libi2c.h, cpukit/libi2c/libi2c.c: Modified error
	messages.  Driver operations table is now constant.  New entry in the
	rtems_libi2c_tfr_mode_t structure: idle_char. This character will be
	continuously transmitted in read only functions.

2008-07-03	Chris Johns <chrisj@rtems.org>

	* cpukit/libcsupport/include/chain.h: Removed. Use the SAPI
	interface that is supported.

	* cpukit/libcsupport/Makefile.am,